--- a/_layouts/project-list.html
+++ b/_layouts/project-list.html
@@ -123,31 +123,31 @@
                     <div class="project-title">Interspatial Echoes</div>
                     <div class="project-description">Geospatial AR</div>
                 </a>
-                <a href="/garden-of-ghost-flowers" class="project-item" data-image="garden-of-ghost-flowers">
+                <a href="{{ '/garden-of-ghost-flowers' | relative_url }}" class="project-item" data-image="garden-of-ghost-flowers">
                     <div class="project-title">Garden of Ghost Flowers</div>
                     <div class="project-description">Performance, VR</div>
-                    </daiv>
-                    <a href="/apparatus-ludens" class="project-item" data-image="apparatus-ludens">
-                        <div class="project-title">Apparatus Ludens</div>
-                        <div class="project-description">Film, AI, Screen/Projection</div>
-                    </a>
-                    <a href="/unknown-cloud" class="project-item" data-image="unknown-cloud">
-                        <div class="project-title">Unknown Cloud</div>
-                        <div class="project-description">Geospatial AR</div>
-                    </a>
+                </a>
+                <a href="{{ '/apparatus-ludens' | relative_url }}" class="project-item" data-image="apparatus-ludens">
+                    <div class="project-title">Apparatus Ludens</div>
+                    <div class="project-description">Film, AI, Screen/Projection</div>
+                </a>
+                <a href="{{ '/unknown-cloud' | relative_url }}" class="project-item" data-image="unknown-cloud">
+                    <div class="project-title">Unknown Cloud</div>
+                    <div class="project-description">Geospatial AR</div>
+                </a>
             </div>
 
             <div class="project-category">
                 <h2>Platforms</h2>
-                <a href="/meadow" class="project-item" data-image="meadow">
+                <a href="{{ '/meadow' | relative_url }}" class="project-item" data-image="meadow">
                     <div class="project-title">Meadow</div>
                     <div class="project-description">Social platform for building and distributing XR content</div>
                 </a>
-                <a href="/skiljelinjer" class="project-item" data-image="skiljelinjer">
+                <a href="{{ '/skiljelinjer' | relative_url }}" class="project-item" data-image="skiljelinjer">
                     <div class="project-title">Skiljelinjer</div>
                     <div class="project-description">AR tool for collaborative design and decision-making</div>
                 </a>
-                <a href="/art-sensation-cube" class="project-item" data-image="art-sensation-cube">
+                <a href="{{ '/art-sensation-cube' | relative_url }}" class="project-item" data-image="art-sensation-cube">
                     <div class="project-title">Art/Sensation Cube</div>
                     <div class="project-description">Web gallery</div>
                 </a>
