updated layout on mobile

--- a/_layouts/project-list.html
+++ b/_layouts/project-list.html
@@ -123,7 +123,7 @@
                     <div class="project-title">Interspatial Echoes</div>
                     <div class="project-description">Geospatial AR</div>
                 </a>
-                <a href="{{ '/garden-of-ghost-flowers' | relative_url }}" class="project-item" data-image="garden-of-ghost-flowers">
+                <a href="https://www.ghost.flowers/" class="project-item" data-image="garden-of-ghost-flowers">
                     <div class="project-title">Garden of Ghost Flowers</div>
                     <div class="project-description">Performance, VR</div>
                 </a>
@@ -139,11 +139,11 @@
 
             <div class="project-category">
                 <h2>Platforms</h2>
-                <a href="{{ '/meadow' | relative_url }}" class="project-item" data-image="meadow">
+                <a href="https://www.meadow.space/" class="project-item" data-image="meadow">
                     <div class="project-title">Meadow</div>
                     <div class="project-description">Social platform for building and distributing XR content</div>
                 </a>
-                <a href="{{ '/skiljelinjer' | relative_url }}" class="project-item" data-image="skiljelinjer">
+                <a href="http://www.skiljelinjer.se/" class="project-item" data-image="skiljelinjer">
                     <div class="project-title">Skiljelinjer</div>
                     <div class="project-description">AR tool for collaborative design and decision-making</div>
                 </a>
