--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Video</title>
     <style>
         #background-container {
