--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@
         </div>
         <div class="navigation">
             <a href="{{ '/projects' | relative_url }}">Projects</a>
-            <a href="{{ '/news' | relative_url }}">News</a>
+            <a href="news.untold.garden">News</a>
             <a href="{{ '/about-us' | relative_url }}">About Us</a>
         </div>
     </div>
