testing different routing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,9 +109,9 @@
             Untold Garden
         </div>
         <div class="navigation">
-            <a href="{{ '/projects' | relative_url }}">Projects</a>
+            <a href="{{ '/projects/' | relative_url }}">Projects</a>
             <a href="https://news.untold.garden">News</a>
-            <a href="{{ '/about-us' | relative_url }}">About Us</a>
+            <a href="{{ '/about-us/' | relative_url }}">About Us</a>
         </div>
     </div>
 </body>
