--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="{{ page.og_image }}"/>
     {% endif %}
     
-    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
     <style>
         .video-wrapper {
             position: relative;
@@ -63,7 +63,7 @@
 
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
-        fetch('/assets/icons.html')
+        fetch('{{ site.baseurl }}/assets/icons.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('icons-container').innerHTML = data;
