--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,11 +12,11 @@
     <!-- Open Graph -->
     <meta property="og:title" content="{{ page.title }} | {{ site.title }}"/>
     <meta property="og:description" content="{{ page.description }}"/>
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
+    <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}"/>
     <meta property="og:site_name" content="{{ site.title }}"/>
     <meta property="og:type" content="website"/>
     {% if page.og_image %}
-    <meta property="og:image" content="{{ page.og_image }}"/>
+    <meta property="og:image" content="{{ page.og_image | relative_url }}"/>
     <meta property="og:image:width" content="{{ page.og_image_width | default: '1920' }}"/>
     <meta property="og:image:height" content="{{ page.og_image_height | default: '1080' }}"/>
     {% endif %}
