--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:site_name" content="Untold Garden" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{ site.url }}assets/images/reach.webp" />
+    <meta property="og:image" content="{{ site.url }}/assets/images/reach.webp" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="1080" />
 
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Untold Garden" />
     <meta name="twitter:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
-    <meta name="twitter:image" content="{{ site.url }}assets/images/reach.webp" />
+    <meta name="twitter:image" content="{{ site.url }}/assets/images/reach.webp" />
 
     <style>
         #background-container {
