--- a/_layouts/project-list.html
+++ b/_layouts/project-list.html
@@ -242,7 +242,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '{{ site.baseurl }}/';
         });
     </script>
 </body>
