--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -76,7 +76,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '{{ site.baseurl }}/projects/';
         });
     </script>
 </body>
